--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ main {
       margin: 0 auto; }
       main .threeCards .card .cardParag {
         height: 250px;
-        margin: 15px 0; }
+        margin: 12px 0; }
       main .threeCards .card h3 {
         margin: 20px 0 0 0;
         text-align: center; }
@@ -392,8 +392,8 @@ main {
       width: 100%; }
     main .cards .owl-carousel.owl-theme .item .cardWithImages {
       background-color: #ffffff;
-      margin: 30px 10px;
-      min-width: 299px;
+      margin: 30px auto;
+      min-width: 268px;
       max-width: 299px;
       height: 400px;
       background: #FFFFFF;
@@ -404,7 +404,9 @@ main {
       justify-self: center; }
       main .cards .owl-carousel.owl-theme .item .cardWithImages img {
         height: 120px;
-        width: 299px;
+        width: 100%;
+        min-width: 268px;
+        max-width: 299px;
         margin: 3rem 0 0 0;
         object-fit: cover; }
       main .cards .owl-carousel.owl-theme .item .cardWithImages hr {
@@ -485,6 +487,36 @@ main {
           main .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton:hover path:first-of-type {
             opacity: 0; }
           main .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton:hover path.icon--plain {
+            opacity: 1; }
+      main .cards .owl-carousel.owl-theme .item .cardWithImages.card__hover {
+        transition: transform 500ms;
+        -webkit-transition: transform 500ms;
+        -moz-transition: transform 500ms;
+        -ms-transition: transform 500ms;
+        -o-transition: transform 500ms; }
+        main .cards .owl-carousel.owl-theme .item .cardWithImages.card__hover::after {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          transition: opacity 2s cubic-bezier(0.165, 0.84, 0.44, 1);
+          box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+          content: '';
+          opacity: 0;
+          z-index: -1;
+          border-radius: 50px;
+          -webkit-border-radius: 50px;
+          -moz-border-radius: 50px;
+          -ms-border-radius: 50px;
+          -o-border-radius: 50px; }
+        main .cards .owl-carousel.owl-theme .item .cardWithImages.card__hover:hover, main .cards .owl-carousel.owl-theme .item .cardWithImages.card__hover:focus {
+          transform: scale3d(1.01, 1.01, 1);
+          -webkit-transform: scale3d(1.01, 1.01, 1);
+          -moz-transform: scale3d(1.01, 1.01, 1);
+          -ms-transform: scale3d(1.01, 1.01, 1);
+          -o-transform: scale3d(1.01, 1.01, 1); }
+          main .cards .owl-carousel.owl-theme .item .cardWithImages.card__hover:hover::after, main .cards .owl-carousel.owl-theme .item .cardWithImages.card__hover:focus::after {
             opacity: 1; }
 
 footer {
@@ -902,14 +934,8 @@ body#Услуги footer {
       text-align: center;
       justify-items: center;
       justify-content: center; }
-      main section.one .threeCards .card:nth-child(1) .cardParag {
-        padding-bottom: 60px; }
-      main section.one .threeCards .card:nth-child(2) .cardParag {
-        padding-bottom: 2px; }
-      main section.one .threeCards .card:nth-child(3) .cardParag {
-        padding-bottom: 95px; }
       main section.one .threeCards .card h3 {
-        margin: 20px 0 0 0;
+        margin: 40px 0 0 0;
         text-align: center; }
       main section.one .threeCards .card hr {
         width: 80%;
@@ -1326,7 +1352,7 @@ body#Услуги footer {
   section.one h2 {
     font-size: 28px; }
   section.two h2 {
-    font-size: 28px; }
+    font-size: 28px !important; }
   footer {
     text-align: center; } }
 
@@ -1417,12 +1443,6 @@ body#Услуги footer {
       border-radius: 50px;
       color: #333333;
       text-align: center; }
-      section.one .threeCards .card:nth-child(1) .cardParag {
-        padding-bottom: 60px; }
-      section.one .threeCards .card:nth-child(2) .cardParag {
-        padding-bottom: 10px; }
-      section.one .threeCards .card:nth-child(3) .cardParag {
-        padding-bottom: 10px; }
       section.one .threeCards .card h3 {
         margin: 10px 0 0 0;
         text-align: center; }
@@ -1484,99 +1504,102 @@ body#Услуги footer {
             opacity: 1; }
   section.two h2 {
     font-size: 28px; }
-  section.three .cards {
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 0px;
-    justify-content: center;
-    justify-items: center; }
-    section.three .cards .cardWithImages {
-      background-color: #ffffff;
-      margin: 30px auto;
-      min-width: 299px;
-      max-width: 299px;
-      min-height: 405px;
-      max-height: 420px;
-      background: #FFFFFF;
-      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
-      border-radius: 50px;
-      color: #333333;
-      text-align: center;
-      justify-self: center; }
-      section.three .cards .cardWithImages img {
-        margin: 3rem 0 0 0; }
-      section.three .cards .cardWithImages h3 {
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 16px;
-        color: #333333; }
-      section.three .cards .cardWithImages p.price {
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 30px;
+  section.three {
+    border-radius: 50px; }
+    section.three .cards {
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-gap: 0px;
+      justify-content: center;
+      justify-items: center; }
+      section.three .cards .owl-carousel.owl-theme .item .cardWithImages {
+        background-color: #ffffff;
+        margin: 30px auto !important;
+        min-width: 268px;
+        max-width: 299px;
+        min-height: 405px;
+        max-height: 420px;
+        background: #FFFFFF;
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+        border-radius: 50px;
         color: #333333;
-        padding: 0; }
-      section.three .cards .cardWithImages p.priceExplanation {
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 12px;
-        color: #6D6D6D;
-        margin: 0 auto;
-        padding: 0; }
-      section.three .cards .cardWithImages p {
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 12px;
         text-align: center;
-        color: #6D6D6D; }
-      section.three .cards .cardWithImages a.cardSvgButton {
-        display: block;
-        color: #557C8C;
-        font-size: 15px;
-        position: relative;
-        margin: 10px auto;
-        padding: 14px 37px;
-        border-radius: 37px;
-        -webkit-border-radius: 37px;
-        -moz-border-radius: 37px;
-        -ms-border-radius: 37px;
-        -o-border-radius: 37px;
-        position: relative;
-        z-index: 0;
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        text-align: center;
-        text-decoration: none; }
-        section.three .cards .cardWithImages a.cardSvgButton .icon {
-          position: absolute;
-          top: 0px;
-          left: 0px;
-          height: 100%;
-          width: 100%;
-          z-index: -1; }
-          section.three .cards .cardWithImages a.cardSvgButton .icon path {
-            transition: opacity 0.4s ease; }
-            section.three .cards .cardWithImages a.cardSvgButton .icon path:first-of-type {
-              fill: transparent;
-              stroke: url(#linearGradient-1);
-              stroke-width: 3;
+        justify-self: center; }
+        section.three .cards .owl-carousel.owl-theme .item .cardWithImages img {
+          margin: 3rem 0 0 0;
+          width: 268px; }
+        section.three .cards .owl-carousel.owl-theme .item .cardWithImages h3 {
+          font-style: normal;
+          font-weight: normal;
+          line-height: normal;
+          font-size: 16px;
+          color: #333333; }
+        section.three .cards .owl-carousel.owl-theme .item .cardWithImages p.price {
+          font-style: normal;
+          font-weight: normal;
+          line-height: normal;
+          font-size: 30px;
+          color: #333333;
+          padding: 0; }
+        section.three .cards .owl-carousel.owl-theme .item .cardWithImages p.priceExplanation {
+          font-style: normal;
+          font-weight: normal;
+          line-height: normal;
+          font-size: 12px;
+          color: #6D6D6D;
+          margin: 0 auto;
+          padding: 0; }
+        section.three .cards .owl-carousel.owl-theme .item .cardWithImages p {
+          font-style: normal;
+          font-weight: normal;
+          line-height: normal;
+          font-size: 12px;
+          text-align: center;
+          color: #6D6D6D; }
+        section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton {
+          display: block;
+          color: #557C8C;
+          font-size: 15px;
+          position: relative;
+          margin: 10px auto;
+          padding: 14px 37px;
+          border-radius: 37px;
+          -webkit-border-radius: 37px;
+          -moz-border-radius: 37px;
+          -ms-border-radius: 37px;
+          -o-border-radius: 37px;
+          position: relative;
+          z-index: 0;
+          font-style: normal;
+          font-weight: normal;
+          line-height: normal;
+          text-align: center;
+          text-decoration: none; }
+          section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton .icon {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            height: 100%;
+            width: 100%;
+            z-index: -1; }
+            section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton .icon path {
+              transition: opacity 0.4s ease; }
+              section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton .icon path:first-of-type {
+                fill: transparent;
+                stroke: url(#linearGradient-1);
+                stroke-width: 3;
+                opacity: 1; }
+              section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton .icon path.icon--plain {
+                opacity: 0;
+                stroke: none;
+                stroke-width: 0; }
+          section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton:hover {
+            transition: all 500ms ease-in-out; }
+            section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton:hover path:first-of-type {
+              opacity: 0; }
+            section.three .cards .owl-carousel.owl-theme .item .cardWithImages a.cardSvgButton:hover path.icon--plain {
               opacity: 1; }
-            section.three .cards .cardWithImages a.cardSvgButton .icon path.icon--plain {
-              opacity: 0;
-              stroke: none;
-              stroke-width: 0; }
-        section.three .cards .cardWithImages a.cardSvgButton:hover {
-          transition: all 500ms ease-in-out; }
-          section.three .cards .cardWithImages a.cardSvgButton:hover path:first-of-type {
-            opacity: 0; }
-          section.three .cards .cardWithImages a.cardSvgButton:hover path.icon--plain {
-            opacity: 1; }
   footer {
     text-align: center; }
   .headerImage h1 {
@@ -1589,6 +1612,11 @@ body#Услуги footer {
     width: 100%; }
     body#Услуги main h2 {
       font-size: 28px; } }
+
+@media screen and (max-width: 320px) {
+  .cardWithImages,
+  #Услуги .cardWithImages {
+    margin: 30px 10px !important; } }
 
 @media screen and (max-width: 720px) and (orientation: landscape) {
   .logo {
