--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -47,6 +47,12 @@ $darkColor: #333333;
     }
 }
 
+@mixin mediaTinny {
+    @media screen and (max-width: 320px) {
+        @content;
+    }
+}
+
 @mixin mediaXXSm {
     @media screen and (max-width: 360px) {
         @content;
