--- a/scss/style.scss
+++ b/scss/style.scss
@@ -354,7 +354,7 @@ main {
 
             .cardParag {
                 height: 250px;
-                margin: 15px 0;
+                margin: 12px 0;
             }
 
 
@@ -505,8 +505,8 @@ main {
 
                     .cardWithImages {
                         background-color: #ffffff;
-                        margin: 30px 10px;
-                        min-width: 299px;
+                        margin: 30px auto;
+                        min-width: 268px;
                         max-width: 299px;
                         height: 400px;
                         background: #FFFFFF;
@@ -518,7 +518,9 @@ main {
 
                         img {
                             height: 120px;
-                            width: 299px;
+                            width: 100%;
+                            min-width: 268px;
+                            max-width: 299px;
                             margin: 3rem 0 0 0;
                             object-fit: cover;
                         }
@@ -628,6 +630,47 @@ main {
                                     &.icon--plain {
                                         opacity: 1;
                                     }
+                                }
+                            }
+                        }
+
+                        &.card__hover {
+                            transition: transform 500ms;
+                            -webkit-transition: transform 500ms;
+                            -moz-transition: transform 500ms;
+                            -ms-transition: transform 500ms;
+                            -o-transition: transform 500ms;
+
+
+                            &::after {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                transition: opacity 2s cubic-bezier(.165, .84, .44, 1);
+                                box-shadow: 0 8px 17px 0 rgba(0, 0, 0, .2), 0 6px 20px 0 rgba(0, 0, 0, .15);
+                                content: '';
+                                opacity: 0;
+                                z-index: -1;
+                                border-radius: 50px;
+                                -webkit-border-radius: 50px;
+                                -moz-border-radius: 50px;
+                                -ms-border-radius: 50px;
+                                -o-border-radius: 50px;
+                            }
+
+                            &:hover,
+                            &:focus {
+                                transform: scale3d(1.01, 1.01, 1);
+                                -webkit-transform: scale3d(1.01, 1.01, 1);
+                                -moz-transform: scale3d(1.01, 1.01, 1);
+                                -ms-transform: scale3d(1.01, 1.01, 1);
+                                -o-transform: scale3d(1.01, 1.01, 1);
+
+
+                                &::after {
+                                    opacity: 1;
                                 }
                             }
                         }
